# words_db

./: .gitignore  AGENTS.md  Cargo.toml  README.md  world_corr_matrix.csv
scripts/: .Rhistory  cor_func.r  merge_countries_and_widen.r  save_parquet.r  unzip_and_convert_to_parquet.r  wrds.py  wrds_crsp.py  wrds_global_factor.py
src/: error.rs  lib.rs  schema.rs
src/finance_data_structs/: compustat.rs  crsp.rs  mod.rs  usindexes.rs  world_indices.rs
src/instantiatedb/: duckdbinst.rs  mod.rs  surrealdbinst.rs
tests/: basic.rs  duck_global.rs
