[package]
name = "words_db"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
polars = { version = "0.51", default-features = false, features = ["csv", "parquet", "dtype-date", "dtype-datetime", "temporal", "dtype-decimal","lazy","fmt_no_tty"] }
surrealdb = { version = "2.0.1", features = ["kv-mem"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
rayon = "1.11.0"
itertools = "0.14.0"
duckdb = { version = "1.4.0", features = ["bundled","chrono"] }
uuid = "1.18.1"
arrow-array = "56.2.0"
